# launchd-mklogs

./: README.md  package.json  setup.cfg  setup.py
scripts/: launchd-mklogs
