# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchd-mklogs
version = 2019.4.13
url = https://github.com/looking-for-a-job/launchd-mklogs
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = launchd logs

[options]
install_requires = 
	setuptools
scripts = 
	scripts/launchd-mklogs
